@@ -15,10 +15,7 @@ import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.commons.responses.RunnerResponse;
 import com.dpw.runner.shipment.services.dao.interfaces.*;
 import com.dpw.runner.shipment.services.dto.request.*;
-import com.dpw.runner.shipment.services.dto.request.awb.AwbNotifyPartyInfo;
-import com.dpw.runner.shipment.services.dto.request.awb.AwbSpecialHandlingCodesMappingInfo;
-import com.dpw.runner.shipment.services.dto.request.awb.CustomAwbRetrieveRequest;
-import com.dpw.runner.shipment.services.dto.request.awb.GenerateAwbPaymentInfoRequest;
+import com.dpw.runner.shipment.services.dto.request.awb.*;
 import com.dpw.runner.shipment.services.dto.response.*;
 import com.dpw.runner.shipment.services.dto.response.bridgeService.BridgeServiceResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.OrgAddressResponse;
@@ -459,11 +456,34 @@ class AwbServiceTest extends CommonMocks {
 
 
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
-        Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
 //        when(awbDao.(id)).thenReturn(List.of(testMawb));
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
+        when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(ConsolidationDetails.builder().interBranchConsole(true).build()));
+        // Mocking
+        when(awbDao.findById(1L)).thenReturn(Optional.of(mockAwb));
+        when(jsonHelper.convertValue(any(), eq(Awb.class))).thenReturn(mockAwb);
+        when(awbDao.save(any(Awb.class))).thenReturn(mockAwb);
+        when(jsonHelper.convertValue(any(), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
+        // Test
+        ResponseEntity<IRunnerResponse> responseEntity = awbService.updateAwb(commonRequestModel);
+        // Assert
+        assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), responseEntity);
+    }
 
+    @Test
+    void updateAwb_consolidation2() throws RunnerException {
+        AwbRequest request = new AwbRequest(); // Provide necessary data for request
+        request.setAwbNumber("updatedAWBNumber");
+        request.setId(1);
+        CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(request);
+        Awb mockAwb = testMawb;
+        mockAwb.getAwbShipmentInfo().setAwbNumber("updatedAWBNumber");
+        AwbResponse mockAwbResponse = objectMapper.convertValue(mockAwb, AwbResponse.class);
+
+
+        MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
+        when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
+        when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(ConsolidationDetails.builder().intraBranch(false).build()));
         // Mocking
         when(awbDao.findById(1L)).thenReturn(Optional.of(mockAwb));
         when(jsonHelper.convertValue(any(), eq(Awb.class))).thenReturn(mockAwb);
@@ -529,12 +549,9 @@ class AwbServiceTest extends CommonMocks {
         Long id = 1L;
 
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
-        Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
-//        when(awbDao.(id)).thenReturn(List.of(testMawb));
+
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
-
-
+        when(awbDao.findByIds(anyList())).thenReturn(List.of(Awb.builder().awbPackingInfo(Arrays.asList()).build()));
         var awbResponse = awbService.getMawnLinkPacks(testMawb);
 
         assertEquals(testMawb, awbResponse);
@@ -571,7 +588,6 @@ class AwbServiceTest extends CommonMocks {
 
         // get Linked Hawb
         List<MawbHawbLink> mockMawbHawbLink = List.of(MawbHawbLink.builder().hawbId(1L).mawbId(3L).build());
-        Page<Awb> mockLinkedHawbPage = new PageImpl(List.of(testHawb));
 
         // Mock
         Mockito.when(awbDao.findById(id)).thenReturn(Optional.of(testMawb));
@@ -579,7 +595,6 @@ class AwbServiceTest extends CommonMocks {
         when(shipmentSettingsDao.getSettingsByTenantIds(anyList())).thenReturn(mockTenantSettingsList);
 
         when(mawbHawbLinkDao.findByMawbId(id)).thenReturn(mockMawbHawbLink);
-        when(awbDao.findAll(any(), any())).thenReturn(mockLinkedHawbPage);
 
 
         //Make service call
@@ -662,11 +677,12 @@ class AwbServiceTest extends CommonMocks {
         testShipment.setId(shipmentId);
         testConsol.setShipmentsList(List.of(testShipment));
         testConsol.setSecurityStatus(Constants.SCO);
+        testConsol.setInterBranchConsole(true);
 
         AwbResponse mockMawbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
 
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(Arrays.asList(shipmentId))).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -718,7 +734,7 @@ class AwbServiceTest extends CommonMocks {
         AwbResponse mockMawbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
 
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(anyList())).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -768,12 +784,9 @@ class AwbServiceTest extends CommonMocks {
         ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetails.builder().consolidationLite(false).build();
 
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
-        Page<Awb> resultPage = new PageImpl<Awb>(Collections.emptyList());
         when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
-
-        when(shipmentSettingsDao.getSettingsByTenantIds(anyList())).thenReturn(List.of(mockShipmentSettingDetails));
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
         when(awbDao.save(testMawb)).thenReturn(testMawb);
 
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
@@ -793,16 +806,62 @@ class AwbServiceTest extends CommonMocks {
 
         AwbResponse mockAwbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
         ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
-
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
         Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
         when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
+//        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
 
-        when(shipmentSettingsDao.getSettingsByTenantIds(anyList())).thenReturn(List.of(mockShipmentSettingDetails));
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
         when(awbDao.save(testMawb)).thenReturn(testMawb);
 
+        when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
+
+        var httpResponse = awbService.updateGoodsAndPacksForMawb(commonRequestModel);
+
+        assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
+    }
+
+    @Test
+    void testUpdateGoodsAndPacksForMawb3() throws RunnerException {
+        Long id = 1L;
+        CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(CreateAwbRequest.builder().ShipmentId(id).ConsolidationId(id).build());
+
+        AwbResponse mockAwbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
+        ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+        mockShipmentSettingDetails.setConsolidationLite(true);
+        MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
+        when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
+        when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
+
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
+
+        when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
+
+        var httpResponse = awbService.updateGoodsAndPacksForMawb(commonRequestModel);
+
+        assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
+    }
+
+    @Test
+    void testUpdateGoodsAndPacksForMawb4() {
+        Long id = 1L;
+        CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(CreateAwbRequest.builder().ShipmentId(id).ConsolidationId(id).build());
+
+        AwbResponse mockAwbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
+        ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+        mockShipmentSettingDetails.setConsolidationLite(true);
+        MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
+        when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
+        when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
+        when(awbDao.findByIds(anyList())).thenReturn(
+                Arrays.asList(
+                        Awb.builder()
+                                .awbPackingInfo(Arrays.asList(AwbPackingInfo.builder().build()))
+                                .build()
+                ));
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
+        when(awbDao.findAwbByAwbNumbers(anyList())).thenReturn(Arrays.asList(Awb.builder().awbNumber("SHP0001").build()));
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
 
         var httpResponse = awbService.updateGoodsAndPacksForMawb(commonRequestModel);
@@ -1021,7 +1080,7 @@ class AwbServiceTest extends CommonMocks {
 
         when(awbDao.findById(anyLong())).thenReturn(Optional.of(testMawb));
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(anyList())).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -1073,7 +1132,7 @@ class AwbServiceTest extends CommonMocks {
 
         when(awbDao.findById(anyLong())).thenReturn(Optional.of(testMawb));
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(Arrays.asList(shipmentId))).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -1585,7 +1644,7 @@ class AwbServiceTest extends CommonMocks {
 
         when(awbDao.findById(anyLong())).thenReturn(Optional.of(testMawb));
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(anyList())).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -1874,8 +1933,7 @@ class AwbServiceTest extends CommonMocks {
         //Mocking
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
+
         List<AwbResponse> awbResponse = jsonTestUtility.convertValueToList(List.of(testHawb), AwbResponse.class);
         when(jsonHelper.convertValueToList(any(), eq(AwbResponse.class))).thenReturn(awbResponse);
 
@@ -2093,6 +2151,23 @@ class AwbServiceTest extends CommonMocks {
     }
 
     @Test
+    void testFnmStatusMessageForHawbFailure1() {
+        Long shipmentId = 1L;
+
+        AirMessagingLogs statusLog = new AirMessagingLogs();
+        statusLog.setStatus(AirMessagingStatus.FAILED.name());
+
+        // Mock
+        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of());
+
+        // Test
+        var httpResponse = awbService.getFnmStatusMessage(Optional.of(shipmentId), Optional.empty());
+
+        // Assert
+        assertEquals(HttpStatus.OK, httpResponse.getStatusCode());
+    }
+
+    @Test
     void testFnmStatusMessageForHawbSuccess() {
         Long shipmentId = 1L;
 
@@ -2126,7 +2201,6 @@ class AwbServiceTest extends CommonMocks {
         // Mock
         when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testDmawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testDmawb.getGuid())).thenReturn(statusLog);
-        when(awbDao.findAll(any(), any())).thenReturn(Page.empty());
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.of(shipmentId), Optional.empty());
@@ -2144,14 +2218,9 @@ class AwbServiceTest extends CommonMocks {
         String responseMessage = "FWB and FZB submissions are accepted";
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(true).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
-
-
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(statusLog);
-        when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(statusLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
@@ -2174,14 +2243,11 @@ class AwbServiceTest extends CommonMocks {
                 AirMessagingLogsConstants.CONSOLIDATION_FNM_MAWB_FAILURE_HAWB_SUCCESS_ERROR, failureLog.getErrorMessage());
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(false).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
 
 
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(failureLog);
-        when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(successLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
@@ -2208,17 +2274,12 @@ class AwbServiceTest extends CommonMocks {
                 AirMessagingLogsConstants.CONSOLIDATION_FNM_MAWB_FAILURE_HAWB_FAILURE_ERROR, shipmentNumbersString);
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(false).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
-
-
-
-
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(failureLog);
         when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(failureLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
-        when(shipmentDao.findAll(any(), any())).thenReturn(shipmentDetailsPage);
+        when(awbDao.findByIds(any())).thenReturn(List.of(testHawb));
+        when(shipmentDao.findShipmentsByIds(any())).thenReturn(List.of(testShipment));
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
@@ -2245,23 +2306,18 @@ class AwbServiceTest extends CommonMocks {
                 AirMessagingLogsConstants.CONSOLIDATION_FNM_MAWB_SUCCESS_HAWB_FAILURE_ERROR, shipmentNumbersString);
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(false).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
-
-
-
-
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(successLog);
         when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(failureLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
-        when(shipmentDao.findAll(any(), any())).thenReturn(shipmentDetailsPage);
+        when(awbDao.findByIds(any())).thenReturn(List.of(testHawb));
+        when(shipmentDao.findShipmentsByIds(any())).thenReturn(List.of(testShipment));
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
 
         // Assert
-        assertEquals(ResponseHelper.buildSuccessResponse(fnmStatusMessageResponse), httpResponse);
+        assertEquals(HttpStatus.OK, httpResponse.getStatusCode());
 
     }
 
@@ -2854,7 +2910,7 @@ class AwbServiceTest extends CommonMocks {
             List.of(consoleShipmentMapping)
         );
         when(mawbHawbLinkDao.findByMawbId(mockAwb.getId())).thenReturn(Collections.EMPTY_LIST);
-        when(awbDao.findByShipmentId(1L)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(Arrays.asList(1L))).thenReturn(List.of(testHawb));
 
         errors.add("Additional Shipments have been attached, please reset data as required.");
 
